maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:7: error: not found: value estfaceMur
      if (estfaceMur()){
          ^